<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_title_with_brand">Lumination Lead Me</string>
    <string name="app_title">Lead Me</string>
    <string name="connect_peer_button">Connect</string>
    <string name="disconnect_peer_button">Disconnect</string>
    <string name="logo_txt">Lumination Logo</string>
    <string name="iconDesc">App Icon</string>
    <string name="empty"></string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="app_message">Select an app from the list to begin guiding your students.</string>
    <string name="nopeers_message">Click \'Find Peers\' to connect to other devices.</string>
    <string name="group_owner_text">"Am I the Group Owner? "</string>
    <string name="label_me">ME</string>
    <string name="label_peers">PEERS</string>
    <string name="label_apps">APPS</string>
    <string name="label_students">CONNECTED STUDENTS</string>
    <string name="label_actions">ACTIONS</string>
    <string name="client_label">Learn</string>
    <string name="host_label">Guide</string>
    <string name="reset_label">Reset</string>
    <string name="ready_label">Let\'s go!</string>
    <string name="waiting_label">Reset</string>
    <string name="learner_connected_label">Connected</string>
    <string name="guide_connected_label">Disconnect</string>
    <string name="send_btn">Send</string>
    <string name="launch_btn">Launch</string>
    <string name="waiting_for_peers">Waiting for connection!</string>
    <string name="clickLetsGo">Type your name then tap \'Let\'s go!\'</string>
    <string name="url_here_placeholder">Type YouTube or website URL here</string>
    <string name="client_connected_message_state">Your guide is </string>
    <string name="student_actions_description">Need help? Try one of these!</string>
    <string name="client_connected_message_detail">Please wait, activities will begin soon.</string>
    <string name="auto_install_title">AUTO-INSTALL</string>
    <string name="name_label">My name is</string>
    <string name="name_placeholder">Type it here!</string>
    <string name="host_indicator">Is host?</string>
    <string name="refresh_conn_app">Refresh connections</string>
    <string name="reset_sett_app">Reset settings</string>
    <string name="exit_app">Exit</string>
    <string name="tick_symbol">&#x2714;</string>
    <string name="cross_symbol">&#x2716;</string>
    <string name="app_return_me">Just me</string>
    <string name="app_return_everyone">Everyone</string>
    <string name="teacher_code_placeholder">Please type in your unlock code</string>
</resources>
