<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:persistentDrawingCache="scrolling">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp">

        <TextView
            android:id="@+id/connectedStudentsLabel"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_gravity="bottom|clip_horizontal"
            android:fontFamily="@font/poppins_semibold"
            android:gravity="center_vertical"
            android:text="@string/label_apps"
            android:textColor="@color/luminationText" />

        <Space
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1" />

        <CheckBox
            android:id="@+id/autoInstallApps"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_gravity="end"
            android:layout_marginEnd="10dp"
            android:checked="false"
            android:fontFamily="@font/poppins_regular"
            android:foregroundGravity="right"
            android:text="@string/auto_install_title"
            android:textColor="@color/luminationText"
            android:textSize="14sp" />

    </LinearLayout>

    <View
        android:id="@+id/view"
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@color/luminationMediumAccent"
        android:gravity="center_vertical" />

    <TextView
        android:id="@+id/appListEmptyMsg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:text="@string/app_message" />

    <GridView
        android:id="@+id/appListView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.8"
        android:background="@color/luminationBG"
        android:clipToPadding="false"
        android:horizontalSpacing="10dp"
        android:numColumns="4"
        android:overScrollMode="never"
        android:verticalSpacing="15dp"
        tools:listitem="@layout/row_apps" />

    <LinearLayout
        android:id="@+id/websiteLauncher"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="@color/luminationLightAccentTrans"
        android:paddingTop="10dp"
        android:paddingBottom="10dp">

        <EditText
            android:id="@+id/urlForLaunch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|center_vertical"
            android:layout_weight="0.90"
            android:autofillHints=""
            android:focusableInTouchMode="true"
            android:hint="@string/url_here_placeholder"
            android:inputType="textUri"
            android:textSize="16sp"
            android:visibility="visible"></EditText>

        <Button
            android:id="@+id/launchUrlBtn"
            android:layout_width="wrap_content"
            android:layout_height="40dip"
            android:layout_gravity="end"
            android:layout_weight="0.1"
            android:background="@drawable/switch_thumb"
            android:text="@string/launch_btn"
            android:textColor="@color/luminationBG"
            android:textSize="14sp" />

    </LinearLayout>

</LinearLayout>